[package]
name = "eco"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Liu <139250065@qq.com>"]
description = "Rust ECO system demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.85"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
